@@ -1,0 +1,1 @@
+<http://example.org/s1> <http://example.org/p2> "Good" .
