@@ -1,8 +1,9 @@
 serd (0.30.11) unstable;
 
   * Fix writing long literals with triple quotes
+  * Write statements with invalid URI characters in lax mode
 
- -- David Robillard <d@drobilla.net>  Mon, 15 Feb 2021 16:34:35 +0000
+ -- David Robillard <d@drobilla.net>  Fri, 09 Apr 2021 19:40:44 +0000
 
 serd (0.30.10) stable;
 
